# finance

./: .containerignore  .gitignore  Containerfile  LICENSE  README.md  analyze_cost.py  data.csv  dev.bat  import_csv.py  pyproject.toml  test_app.py  test_main.http
app/: config.cfg  database.py  main.py  models.py
app/logic/: asx_scraper.py  portfolio_logic.py  ticker_logic.py
app/routers/: portfolio.py  settings.py  tickers.py  transactions.py  websocket.py
app/templates/: _ticker_list.html  _transaction_list.html  base.html  dashboard.html  exposure.html  holding_row.html  portfolio.html  settings.html  ticker_edit_breakdown.html  tickers.html  transactions.html
deploy/: README.md  SOLDIERBIRD.md  finance.container
