[project]
name = "finance"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.21",
    "pyxirr>=0.10.8",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
    "yfinance>=1.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
